--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SQLALCHEMY_DATABASE_URI=postgresql://myuser:meal@localhost:5432/meal_dev
+SQLALCHEMY_DATABASE_URI=postgresql://myuser:meal@localhost:5432/meal
